--- a/styles.scss
+++ b/styles.scss
@@ -1,20 +1,23 @@
-$font_size: 20px;
-$header_color: rgb(77, 77, 77);
+$border_color: rgb(121, 99, 128);
+$font_size: 18px;
+$header_bg_color: rgb(63, 49, 85);
+$header_color: rgb(220, 223, 208);
+$header_font: 'Times New Roman', Times, serif;
 
-a {
-    color: skyblue;
-    text-decoration: none;
+p > a {
+    color: rgb(220, 223, 208);
 }
 
-a:visited {
-  color: rgb(189, 155, 255);
+p > a:visited {
+  color: rgb(105, 114, 104);
 }
 
-a:hover, a:visited:hover {
+p > a:hover, a:visited:hover {
   color: orange;
+  text-decoration: underline;
 }
 
-a:active {
+p > a:active {
   color: red;
 }
 
@@ -22,24 +25,33 @@ p > a:hover {
   text-decoration: underline;
 }
 
-body {
-  background-color: rgb(42, 42, 42);
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+p {
   padding: 15px;
+}
+
+body {
+  background-color: rgb(1, 30, 56);
+  color: rgb(160, 192, 226);
+  font-family: Arial, Helvetica, sans-serif;
 }
   
 header > a {
   display: inline-block;
-  border: 2px solid rgb(175, 175, 175);
+  border: 2px solid $border_color;
   border-radius: 25px;
-  background-color: $header_color;
-  font-size: $font_size;
-  font-weight: bold;
+  background-color: $header_bg_color;
+  color: $header_color;
+  font-family: $header_font;
+  font-size: 20px;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 40px;
   padding-right: 40px;
+  text-decoration: underline;
+}
+
+header > a:visited {
+  color: rgb(105, 114, 104);
 }
 
 figure {
@@ -49,17 +61,21 @@ figure {
 }
 
 h1 {
-  background-color: $header_color;
-  border: 2px solid rgb(175, 175, 175);
+  background-color: $header_bg_color;
+  border: 2px solid $border_color;
   border-radius: 5px;
+  color: $header_color;
+  font-family: $header_font;
   padding: 16px;
   text-align: center;
 }
 
 h2 {
-  background-color: $header_color;
-  border: 2px solid rgb(175, 175, 175);
+  background-color: $header_bg_color;
+  border: 2px solid $border_color;
   border-radius: 5px;
+  color: $header_color;
+  font-family: $header_font;
   padding: 8px;
   text-align: center;
 }
